Main page. Show all visibles rests. Fix controller

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,5 +15,23 @@ ul, li {
   list-style: none; /* Убираем оформление списков */
 }
 
-/* ------- БЛОК ... -------- */
 
+/* ------- main-page -------- */
+
+.main-page__container {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+/* ------- XXX page -------- */
+
+
+
+/* ------- XXX something -------- */
+
+
+
+/* ------- XXX something -------- */
